# chat-with-lily

./: .gitignore  README.md  pyproject.toml  settings.jsonc
dataset/res/sft/: dataset_info.json  sft-lily.jsonl
lily/: cli.py
lily/data/: conversation_gen.py  models.py  qa_gen.py
lily/utils/: config.py  length_cdf.py  log.py
