[project]
name = "chat-with-lily"
version = "0.0.1"
description = "a goth chatbot"
authors = [{ name = "lisphi" }]
readme = "README.md"
requires-python = ">=3.10,<3.11"

dependencies = [
  "pandas",
  "commentjson",
  "click",
  "loguru>=0.7.3",
]

[dependency-groups]
# xcodec = ["xcodec2==0.1.3"] 
sparktts = [
  "einops>=0.8.1",
  "einx>=0.3.0",
  "numpy==1.26.4",
  "omegaconf>=2.3.0",
  "packaging>=24.2",
  "safetensors>=0.5.2",
  "soundfile>=0.12.1",
  "soxr>=0.5.0.post1",
  "torchaudio>=2.6.0",
  "tqdm>=4.66.5",
]
main = ["llamafactory>=0.9.2", "openai==1.76.0", "vllm==0.8.2"]
dev = ["pytest", "pyright", "ruff"]

[project.scripts]
mycli = "lily.cli:cli"

[tool.uv]
# 可选：配置镜像源等

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[tool.setuptools.packages.find]
where = ["."]                      
include = ["lily"]             
exclude = ["*tests*", "*archive*"] 
